--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/JayBee007/glepcamp#readme",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "ejs": "^2.5.5",
     "express": "^4.14.1"
   }
